--- a/latent.ipynb
+++ b/latent.ipynb
@@ -16,7 +16,7 @@
         "id": "NUmmV5ZvrPbP"
       },
       "source": [
-        "# Latent Majesty Diffusion v1.4\n",
+        "# Latent Majesty Diffusion v1.6\n",
         "#### Formerly known as Princess Generator\n",
         "##### Access our [Majestic Guide](https://multimodal.art/majesty-diffusion) (_under construction_), our [GitHub](https://github.com/multimodalart/majesty-diffusion), join our community on [Discord](https://discord.gg/yNBtQBEDfZ) or reach out via [@multimodalart on Twitter](https://twitter.com/multimodalart))\n",
         "\\\n",
@@ -26,11 +26,36 @@
         "\n",
         "\n",
         "#### CLIP Guided Latent Diffusion by [dango233](https://github.com/Dango233/) and [apolinario (@multimodalart)](https://twitter.com/multimodalart). \n",
-        "The LAION-400M-trained model and the modified inference code are from [CompVis Latent Diffusion](https://github.com/CompVis/latent-diffusion). The guided-diffusion method is modified by Dango233 based on [Katherine Crowson](https://twitter.com/RiversHaveWings)'s guided diffusion notebook. multimodalart savable settings, MMC and assembled the Colab. Check the complete list on our GitHub. Some functions and methods are from various code masters (nsheppard, DanielRussRuss and others)\n",
+        "The LAION-400M-trained model and the modified inference code are from [CompVis Latent Diffusion](https://github.com/CompVis/latent-diffusion). The guided-diffusion method is modified by Dango233 based on [Katherine Crowson](https://twitter.com/RiversHaveWings)'s guided diffusion notebook. multimodalart savable settings, MMC and assembled the Colab. Check the complete list on our GitHub. Some functions and methods are from various code masters (nsheppard, DanielRussRuss and others)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WOAs3ZvLlktt"
+      },
+      "source": [
+        "## Changelog\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "p15Fm1AjloLa"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown Release: 1.2 (prior versions were Princess Generator and you can check [GitHub out for that](https://github.com/multimodalart/majesty-diffusion/))\n",
         "\n",
-        "Changelog: 1.3 - better upscaler (learn how to use it on our [Majestic Guide](https://multimodal.art/majesty-diffusion))\n",
+        "#@markdown Changelog: 1.3 - better upscaler (learn how to use it on our [Majestic Guide](https://multimodal.art/majesty-diffusion))\n",
         "\n",
-        "Changelog: 1.4 - better defaults, added ViT-L/14 LAION-400M trained, fix CLOOB, adds modified dynamic thresholding, removes latent upscaler (was broken), adds RGB upscaler\n"
+        "#@markdown Changelog: 1.4 - better defaults, added OpenCLIP ViT-L/14 LAION-400M, fix CLOOB, adds modified dynamic thresholding, removes latent upscaler (was broken), adds RGB upscaler \n",
+        "\n",
+        "#@markdown Changelog 1.5 - even better defaults, better dynamic thresholidng, fixes range scale, adds var and mean scales, adds the possibility of blurring cuts\n",
+        "\n",
+        "#@markdown Changelog 1.6 - ViT-L conditioning for latenet diffusion, adds noising and scaling during advanced scheduling phases, fixes linear ETA, adss LAION models"
       ]
     },
     {
@@ -91,8 +116,9 @@
       "source": [
         "#@title Model settings\n",
         "#@markdown The `original` model is the model trained by CompVis in the LAION-400M dataset\n",
-        "#@markdown <br>The `finetuned` model is a finetune of the `original` model by Jack000 that generates less watermarks, but is a bit worse in text synthesis. Colab Free does not have enough run for the finetuned (for now)\n",
-        "latent_diffusion_model = 'original' #@param [\"original\", \"finetuned\"]"
+        "#@markdown <br>The `finetuned` model is a finetune of the `original` model [by Jack000](https://github.com/Jack000/glid-3-xl) that generates less watermarks, but is a bit worse in text synthesis. Colab Free does not have enough run for the finetuned (for now)\n",
+        "#@markdown <br>The `ongo` and `erlich` models are models [fine-tuned by LAION](https://github.com/LAION-AI/ldm-finetune)on art (ongo) and erlich (logos) \n",
+        "latent_diffusion_model = 'finetuned' #@param [\"original\", \"finetuned\", \"ongo (fine tuned in paintings)\", \"erlich (fine tuned in logos)\"]"
       ]
     },
     {
@@ -122,10 +148,11 @@
         "        downgrade_pytorch_result = subprocess.run(['pip', 'install', 'torch==1.10.2', 'torchvision==0.11.3', '-q'], stdout=subprocess.PIPE).stdout.decode('utf-8')\n",
         "    import sys\n",
         "    sys.path.append(\".\")\n",
-        "    !git clone https://github.com/multimodalart/latent-diffusion --branch 1.4\n",
+        "    !git clone https://github.com/multimodalart/latent-diffusion --branch 1.6\n",
         "    !git clone https://github.com/CompVis/taming-transformers\n",
         "    !git clone https://github.com/TencentARC/GFPGAN\n",
-        "    !git clone https://github.com/NightmareAI/majesty-diffusion --branch 1.4\n",
+        "    !git lfs clone https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\n",
+        "    !git clone https://github.com/NightmareAI/majesty-diffusion --branch 1.6-cli\n",
         "    !git lfs clone https://github.com/LAION-AI/aesthetic-predictor\n",
         "    !pip install -e ./taming-transformers\n",
         "    !pip install omegaconf>=2.0.0 pytorch-lightning>=1.0.8 torch-fidelity einops\n",
@@ -231,7 +258,7 @@
         "from ldm.util import instantiate_from_config\n",
         "from ldm.models.diffusion.ddim import DDIMSampler\n",
         "from ldm.models.diffusion.plms import PLMSSampler\n",
-        "from ldm.modules.diffusionmodules.util import noise_like\n",
+        "from ldm.modules.diffusionmodules.util import noise_like, make_ddim_sampling_parameters\n",
         "import tensorflow as tf\n",
         "from dotmap import DotMap\n",
         "import ipywidgets as widgets\n",
@@ -262,6 +289,8 @@
         "from numpy import nan\n",
         "from threading import Thread\n",
         "import time\n",
+        "import re\n",
+        "import base64\n",
         "\n",
         "#sys.path.append('../CLIP')\n",
         "#Resizeright for better gradient when resizing\n",
@@ -428,24 +457,27 @@
         "#Custom cut schedules and super-resolution. Check out the guide on how to use it a https://multimodal.art/majestydiffusion\n",
         "majesty.custom_schedule_setting = [\n",
         " [50,1000,8],\n",
-        " \"gfpgan:1.5\",\n",
-        " [5,200,5],\n",
+        " \"gfpgan:1.5\",\"scale:.9\",\"noise:.55\",\n",
+        " [50,200,5],\n",
         "]\n",
         "              \n",
         "#Cut settings\n",
-        "majesty.clamp_index = [2,1.4] #linear variation of the index for clamping the gradient  \n",
+        "majesty.clamp_index = [2.1,1.6] #linear variation of the index for clamping the gradient  \n",
         "majesty.cut_overview = [8]*500 + [4]*500\n",
         "majesty.cut_innercut = [0]*500 + [4]*500\n",
         "majesty.cut_ic_pow = .2\n",
         "majesty.cut_icgray_p = [.1]*300+[0]*1000\n",
         "majesty.cutn_batches = 1\n",
-        "majesty.cut_blur_n = [0]*400 + [0]*600\n",
+        "majesty.cut_blur_n = [0]*300 + [0]*1000\n",
         "majesty.cut_blur_kernel = 3\n",
-        "majesty.range_index = [0]*1000\n",
+        "majesty.range_index =  [0]*200+ [5e4]*400 + [0]*1000\n",
+        "majesty.var_index = [2]*300+[0]*700\n",
+        "majesty.var_range = 0.5\n",
+        "majesty.mean_index = [0]*400+[0]*600\n",
+        "majesty.mean_range = 0.75\n",
         "majesty.active_function = \"softsign\" # function to manipulate the gradient - help things to stablize\n",
-        "majesty.ths_method = \"softsign\"\n",
+        "majesty.ths_method = \"clamp\"\n",
         "majesty.tv_scales = [600]*1+[50]*1 +[0]*2\n",
-        "majesty.latent_tv_loss = True #Applies the TV Loss in the Latent space instead of pixel, improves generation quality\n",
         "\n",
         "#If you uncomment next line you can schedule the CLIP guidance across the steps. Otherwise the clip_guidance_scale basic setting will be used\n",
         "#clip_guidance_schedule = [10000]*300 + [500]*700\n",
@@ -454,29 +486,28 @@
         "\n",
         "#Latent Diffusion Advanced Settings\n",
         "majesty.scale_div = 1 # Use when latent upscale to correct satuation problem\n",
-        "majesty.opt_mag_mul = 15 #Magnify grad before clamping\n",
+        "majesty.opt_mag_mul = 20 #Magnify grad before clamping\n",
         "#PLMS Currently not working, working on a fix\n",
-        "#opt.plms = False #Won;=t work with clip guidance\n",
-        "majesty.opt_ddim_eta, majesty.opt_eta_end = [1.5,1.2] # linear variation of eta\n",
-        "majesty.opt_temperature = .95\n",
+        "opt.plms = False #Experimental. It works but does not lookg good\n",
+        "majesty.opt_ddim_eta, majesty.opt_eta_end = [1.3,1.1] # linear variation of eta\n",
+        "majesty.opt_temperature = .98\n",
         "\n",
         "#Grad advanced settings\n",
         "majesty.grad_center = False\n",
-        "majesty.grad_scale= 0.75 #Lower value result in more coherent and detailed result, higher value makes it focus on more dominent concept\n",
+        "majesty.grad_scale= 0.25 #Lower value result in more coherent and detailed result, higher value makes it focus on more dominent concept\n",
         "\n",
         "#Restraints the model from explodign despite larger clamp\n",
         "majesty.score_modifier = True\n",
-        "majesty.threshold_percentile = .9\n",
-        "majesty.threshold = 1.2\n",
-        "majesty.var_index = [0]*1000\n",
-        "\n",
+        "majesty.threshold_percentile = .85\n",
+        "majesty.threshold = 1\n",
+        "majesty.score_corrector_setting = [\"latent\", \"\"]\n",
         "\n",
         "#Init image advanced settings\n",
         "majesty.init_rotate, majesty.mask_rotate=[False, False]\n",
-        "majesty.init_magnitude = 0.15\n",
+        "majesty.init_magnitude = 0.18215\n",
         "\n",
         "#More settings\n",
-        "majesty.RGB_min, majesty.RGB_max = [-1,1]\n",
+        "majesty.RGB_min, majesty.RGB_max = [-0.95,0.95]\n",
         "majesty.padargs = {\"mode\":\"constant\", \"value\": -1} #How to pad the image with cut_overview\n",
         "majesty.flip_aug=False\n",
         "majesty.cutout_debug = False\n",
@@ -491,10 +522,10 @@
         "\n",
         "# For fun dont change except if you really know what your are doing\n",
         "majesty.grad_blur = False\n",
-        "majesty.compress_steps = 0\n",
+        "majesty.compress_steps = 200\n",
         "majesty.compress_factor = 0.1\n",
-        "majesty.punish_steps = 0\n",
-        "majesty.punish_factor = 0.8"
+        "majesty.punish_steps = 200\n",
+        "majesty.punish_factor = 0.5"
       ]
     },
     {
@@ -511,7 +542,7 @@
       },
       "source": [
         "### Prompts\n",
-        "The main prompt is the CLIP prompt. The Latent Prompts usually help with style and composition, you can turn them off by setting `latent_diffsion_guidance_scale=0` "
+        "The main prompt is the CLIP prompt. The Latent Prompts usually help with style and composition."
       ]
     },
     {
@@ -524,10 +555,10 @@
       "source": [
         "#Amp up your prompt game with prompt engineering, check out this guide: https://matthewmcateer.me/blog/clip-prompt-engineering/\n",
         "#Prompt for CLIP Guidance\n",
-        "clip_prompts =[\"portrait of a Majestic Princess, trending on artstation\"]  \n",
+        "clip_prompts =[\"The portrait of a Majestic Princess, trending on artstation\"]  \n",
         "\n",
         "#Prompt for Latent Diffusion\n",
-        "latent_prompts = [\"portrait of a Majestic Princess, trending on artstation\"]  \n",
+        "latent_prompts = [\"The portrait of a Majestic Princess, trending on artstation\"]  \n",
         "\n",
         "#Negative prompts for Latent Diffusion\n",
         "latent_negatives = [\"\"]\n",
@@ -556,11 +587,14 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "#@markdown ### Basic settings \n",
-        "#@markdown We're still figuring out default settings. Experiment and <a href=\"https://github.com/multimodalart/majesty-diffusion\">share your settings with us</a>\n",
+        "#@markdown We're still figuring out default settings. Experiment and <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us</a>\n",
         "majesty.width =  256#@param{type: 'integer'}\n",
         "majesty.height =  256#@param{type: 'integer'}\n",
-        "majesty.latent_diffusion_guidance_scale = 15 #@param {type:\"number\"}\n",
-        "majesty.clip_guidance_scale =  5000#@param{type: 'integer'}\n",
+        "#@markdown The `latent_diffusion_guidance_scale` will determine how much the `latent_prompts` affect the image. Lower help with text interpretation, higher help with composition. Try values between 0-15. If you see too much text, lower it  \n",
+        "majesty.latent_diffusion_guidance_scale = 12 #@param {type:\"number\"}\n",
+        "#@markdown The `clamp_index` will determine how much of the `clip_prompts` affect the image, it is a linear scale that will decrease from the first to the second value. Try values between 3-1\n",
+        "majesty.clamp_index = [2.4, 2.1] #@param{type: 'raw'}\n",
+        "majesty.clip_guidance_scale =  16000#@param{type: 'integer'}\n",
         "majesty.how_many_batches = 1 #@param{type: 'integer'}\n",
         "majesty.aesthetic_loss_scale = 400 #@param{type: 'integer'}\n",
         "majesty.augment_cuts=True #@param{type:'boolean'}\n",
@@ -579,22 +613,19 @@
         "#@markdown `init_scale` controls how much the init image should influence the final result. Experiment with values around `1000`\n",
         "majesty.init_scale = 1000 #@param{type: 'integer'}\n",
         "majesty.init_brightness = 0.0 #@param{type: 'number'}\n",
-        "#@markdown How much extra noise to add to the init image, independently from skipping timesteps (use it also if you are upscaling)\n",
-        "majesty.init_noise = 0.57 #@param{type: 'number'}\n",
+        "#  @markdown How much extra noise to add to the init image, independently from skipping timesteps (use it also if you are upscaling)\n",
+        "#majesty.init_noise = 0.57 #@param{type: 'number'}\n",
         "\n",
         "#@markdown\n",
         "\n",
         "#@markdown ### Custom saved settings\n",
         "#@markdown If you choose custom saved settings, the settings set by the preset overrule some of your choices. You can still modify the settings not in the preset. <a href=\"https://github.com/multimodalart/majesty-diffusion/tree/main/latent_settings_library\">Check what each preset modifies here</a>\n",
         "majesty.custom_settings = 'path/to/settings.cfg' #@param{type:'string'}\n",
-        "settings_library = 'None (use settings defined above)' #@param [\"None (use settings defined above)\", \"default (optimized for colab free)\", \"dango233_princesses\", \"the_other_zippy_defaults\", \"makeitrad_defaults\"]\n",
+        "settings_library = 'None (use settings defined above)' #@param [\"None (use settings defined above)\", \"default\", \"defaults_v1_3\", \"dango233_princesses\", \"the_other_zippy_defaults\", \"makeitrad_defaults\"]\n",
         "if(settings_library != 'None (use settings defined above)'):\n",
-        "  if(settings_library == 'default (optimized for colab free)'):\n",
-        "    custom_settings = f'majesty-diffusion/latent_settings_library/default.cfg'\n",
-        "  else:\n",
-        "    custom_settings = f'majesty-diffusion/latent_settings_library/{settings_library}.cfg'\n",
+        "  custom_settings = f'latent-majesty-diffusion-settings/{settings_library}.cfg'\n",
+        "\n",
         "majesty.load_custom_settings()\n",
-        "majesty.full_clip_load()\n",
         "majesty.config_init_image()\n",
         "\n",
         "majesty.prompts = clip_prompts\n",
@@ -604,6 +635,40 @@
         "majesty.config_clip_guidance()\n",
         "majesty.config_output_size()\n",
         "majesty.config_options()\n",
+        "\n",
+        "#Checks if it's not a normal schedule (legacy purposes to keep old configs compatible)\n",
+        "if(len(clamp_index) == 2): \n",
+        "  clamp_index_variation = np.linspace(clamp_index[0],clamp_index[1],1000) \n",
+        "\n",
+        "else:\n",
+        "  clamp_index_variation = clamp_index\n",
+        "score_corrector = DotMap()\n",
+        "\n",
+        "\n",
+        "def modify_score(e_t, e_t_uncond):\n",
+        "        if(score_modifier is False):\n",
+        "          return e_t\n",
+        "        else:\n",
+        "          e_t_d = (e_t - e_t_uncond)\n",
+        "          s = torch.quantile(\n",
+        "              rearrange(e_t_d, 'b ... -> b (...)').abs().float(),\n",
+        "              threshold_percentile,\n",
+        "              dim = -1\n",
+        "          )\n",
+        "\n",
+        "        s.clamp_(min = 1.)\n",
+        "        s = s.view(-1, *((1,) * (e_t_d.ndim - 1)))\n",
+        "        if ths_method == \"softsign\":\n",
+        "            e_t_d = F.softsign(e_t_d) / s \n",
+        "        elif ths_method == \"clamp\":\n",
+        "            e_t_d = e_t_d.clamp(-s,s) / s * 1.3#1.2\n",
+        "        e_t = e_t_uncond + e_t_d\n",
+        "        return(e_t)\n",
+        "          \n",
+        "score_corrector.modify_score = modify_score\n",
+        "\n",
+        "def dynamic_thresholding(pred_x0,t):\n",
+        "    return(pred_x0)\n",
         "\n",
         "torch.cuda.empty_cache()\n",
         "gc.collect()\n",
@@ -631,7 +696,7 @@
       "source": [
         "\n",
         "#@markdown ### Save current settings\n",
-        "#@markdown If you would like to save your current settings, uncheck `skip_saving` and run this cell. You will get a `custom_settings.cfg` file you can reuse and share. If you like your results, send us a <a href=\"#\">pull request</a> to add your settings to the selectable library\n",
+        "#@markdown If you would like to save your current settings, uncheck `skip_saving` and run this cell. You will get a `custom_settings.cfg` file you can reuse and share. If you like your results, <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us on the settings library</a>\n",
         "skip_saving = True #@param{type:'boolean'}\n",
         "if(not skip_saving):\n",
         "  data = majesty.generate_settings_file(add_prompts=False, add_dimensions=True)\n",
@@ -663,10 +728,11 @@
         "xEVSOJ4f0B21",
         "VpR9JhyCu5iq",
         "N_Di3xFSXGWe",
-        "xEVSOJ4f0B21"
+        "xEVSOJ4f0B21",
+        "WOAs3ZvLlktt"
       ],
       "machine_shape": "hm",
-      "name": "Latent Majesty Diffusion v1.4",
+      "name": "Latent Majesty Diffusion v1.6",
       "private_outputs": true,
       "provenance": []
     },
