--- a/v.ipynb
+++ b/v.ipynb
@@ -114,8 +114,9 @@
         "    sys.path.append(\".\")\n",
         "    !git clone https://github.com/crowsonkb/v-diffusion-pytorch\n",
         "    !git clone https://github.com/crowsonkb/guided-diffusion\n",
-        "    !git clone https://github.com/multimodalart/majesty-diffusion\n",
+        "    !git lfs clone https://huggingface.co/datasets/multimodalart/v-majesty-diffusion-settings\n",
         "    !git lfs clone https://github.com/LAION-AI/aesthetic-predictor\n",
+        "    \n",
         "    sys.path.append('./guided-diffusion')\n",
         "    !pip install omegaconf>=2.0.0 pytorch-lightning>=1.0.8 torch-fidelity einops\n",
         "    !pip install resize-right\n",
@@ -1538,6 +1539,7 @@
         "range_index =  [1500000]*100+[0]*1000\n",
         "eta_index = [1.2]*100\n",
         "symmetric_loss_scale = 0\n",
+        "grad_scale = 1\n",
         "grad_center = False\n",
         "mag_mul = 1\n",
         "clamp_start_=0\n",
@@ -1660,9 +1662,9 @@
         "settings_library = 'None (use settings defined above)' #@param [\"None (use settings defined above)\", \"default (optimized for colab free)\", \"disco_diffusion_defaults\"]\n",
         "if(settings_library != 'None (use settings defined above)'):\n",
         "  if(settings_library == 'default (optimized for colab free)'):\n",
-        "    custom_settings = f'majesty-diffusion/v_settings_library/default.cfg'\n",
+        "    custom_settings = f'v-majesty-diffusion-settings/default.cfg'\n",
         "  else:\n",
-        "    custom_settings = f'majesty-diffusion/v_settings_library/{settings_library}.cfg'\n",
+        "    custom_settings = f'v-majesty-diffusion-settings/{settings_library}.cfg'\n",
         "\n",
         "is_custom_settings = (custom_settings is not None and custom_settings is not '' and custom_settings != 'path/to/settings.cfg')\n",
         "\n",
