selective downloads of ongo and erlich

--- a/latent.ipynb
+++ b/latent.ipynb
@@ -207,7 +207,9 @@
         "sys.path.append('./majesty-diffusion')\n",
         "import majesty\n",
         "majesty.model_path = model_path\n",
-        "majesty.download_models()\n"
+        "ongo = latent_diffusion_model.startswith('ongo')\n",
+        "erlich = latent_diffusion_model.startswith('erlich')\n",
+        "majesty.download_models(ongo, erlich)\n"
       ]
     },
     {
