custom for local run in docker

--- a/latent.ipynb
+++ b/latent.ipynb
@@ -77,9 +77,9 @@
       "outputs": [],
       "source": [
         "#@markdown Enable saving outputs to Google Drive to save your creations at AI/models\n",
-        "save_outputs_to_google_drive = True #@param {type:\"boolean\"}\n",
+        "save_outputs_to_google_drive = False #@param {type:\"boolean\"}\n",
         "#@markdown Enable saving models to Google Drive to avoid downloading the model every Colab instance\n",
-        "save_models_to_google_drive = True #@param {type:\"boolean\"}\n",
+        "save_models_to_google_drive = False #@param {type:\"boolean\"}\n",
         "\n",
         "if save_outputs_to_google_drive or save_models_to_google_drive:\n",
         "    from google.colab import drive\n",
@@ -97,11 +97,11 @@
         "print(f\"Outputs will be saved to {outputs_path}\")\n",
         "\n",
         "#If you want to run it locally change it to true\n",
-        "is_local = False\n",
-        "skip_installs = False\n",
+        "is_local = True\n",
+        "skip_installs = True\n",
         "if(is_local):\n",
-        "  model_path = \"/choose/your/local/model/path\"\n",
-        "  outputs_path = \"/choose/your/local/outputs/path\"\n",
+        "  model_path = \"/root/.cache/majesty\"\n",
+        "  outputs_path = \"/output\"\n",
         "  skip_installs = True"
       ]
     },
