--- a/latent.ipynb
+++ b/latent.ipynb
@@ -204,6 +204,7 @@
       "source": [
         "#@title Download models\n",
         "import sys\n",
+        "sys.path.append(\"./latent-diffusion\")\n",
         "sys.path.append('./majesty-diffusion')\n",
         "import majesty\n",
         "majesty.model_path = model_path\n",
