Add support for seed

--- a/latent.ipynb
+++ b/latent.ipynb
@@ -588,6 +588,7 @@
         "warnings.filterwarnings('ignore')\n",
         "#@markdown ### Basic settings \n",
         "#@markdown We're still figuring out default settings. Experiment and <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us</a>\n",
+        "majesty.seed = -1#@param{type: 'integer'}\n",
         "majesty.width =  256#@param{type: 'integer'}\n",
         "majesty.height =  256#@param{type: 'integer'}\n",
         "#@markdown The `latent_diffusion_guidance_scale` will determine how much the `latent_prompts` affect the image. Lower help with text interpretation, higher help with composition. Try values between 0-15. If you see too much text, lower it  \n",
