--- a/latent.ipynb
+++ b/latent.ipynb
@@ -152,7 +152,7 @@
         "    !git clone https://github.com/CompVis/taming-transformers\n",
         "    !git clone https://github.com/TencentARC/GFPGAN\n",
         "    !git lfs clone https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\n",
-        "    !git clone https://github.com/NightmareAI/majesty-diffusion --branch 1.6-cli\n",
+        "    !git clone https://github.com/NightmareAI/majesty-diffusion --branch seed\n",
         "    !git lfs clone https://github.com/LAION-AI/aesthetic-predictor\n",
         "    !pip install -e ./taming-transformers\n",
         "    !pip install omegaconf>=2.0.0 pytorch-lightning>=1.0.8 torch-fidelity einops\n",
@@ -588,7 +588,7 @@
         "warnings.filterwarnings('ignore')\n",
         "#@markdown ### Basic settings \n",
         "#@markdown We're still figuring out default settings. Experiment and <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us</a>\n",
-        "majesty.seed = -1#@param{type: 'integer'}\n",
+        "seed = -1#@param{type: 'integer'}\n",
         "majesty.width =  256#@param{type: 'integer'}\n",
         "majesty.height =  256#@param{type: 'integer'}\n",
         "#@markdown The `latent_diffusion_guidance_scale` will determine how much the `latent_prompts` affect the image. Lower help with text interpretation, higher help with composition. Try values between 0-15. If you see too much text, lower it  \n",
@@ -631,8 +631,16 @@
         "global progress\n",
         "progress = widgets.Image(layout = widgets.Layout(max_width = \"400px\",max_height = \"512px\"))\n",
         "display.display(progress)\n",
-        "for n in trange(how_many_batches, desc=\"Sampling\"):\n",
-        "  print(f\"Sampling images {n+1}/{how_many_batches}\")\n",
+        "# Seed\n",
+        "if seed > 0:\n",
+        "    torch.manual_seed(seed)\n",
+        "else:\n",
+        "    seed = random.randint(0, 2**32)\n",
+        "    torch.manual_seed(seed)\n",
+        "    print(f\"Using seed {seed}\")\n",
+        "\n",
+        "for n in trange(majesty.how_many_batches, desc=\"Sampling\"):\n",
+        "  print(f\"Sampling images {n+1}/{majesty.how_many_batches}\")\n",
         "  majesty.prompts = clip_prompts\n",
         "  majesty.opt.prompt = latent_prompts\n",
         "  majesty.opt.uc = latent_negatives\n",
