--- a/latent.ipynb
+++ b/latent.ipynb
@@ -346,6 +346,7 @@
         "import time\n",
         "import re\n",
         "import base64\n",
+        "import datetime\n",
         "\n",
         "#sys.path.append('../CLIP')\n",
         "#Resizeright for better gradient when resizing\n",
@@ -427,7 +428,18 @@
         "cellView": "form",
         "id": "HY_7vvnPThzS"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mRunning cells with 'Python 3.10.4 64-bit' requires ipykernel package.\n",
+            "Run the following command to install 'ipykernel' into the Python environment. \n",
+            "Command: 'c:/Python310/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
         "#@title Load necessary functions\n",
         "def set_custom_schedules(schedule):\n",
@@ -792,8 +804,16 @@
         "    '''\n",
         "  else:\n",
         "    dimensions = ''\n",
+        "  \n",
+        "  comment = f'#Created {datetime.datetime.now().strftime(\"%I:%M%p on %B %d, %Y\")}'\n",
+        "  if(custom_settings is not None and custom_settings != '' and custom_settings != 'path/to/settings.cfg'):\n",
+        "      comment += f' with preset {custom_settings}'\n",
+        "  if(run_name):\n",
+        "      comment += f'\\n#Run: {run_name}'\n",
+        "  \n",
         "  settings = f'''\n",
-        "    #This settings file can be loaded back to Latent Majesty Diffusion. If you like your setting consider sharing it to the settings library at https://github.com/multimodalart/MajestyDiffusion\n",
+        "    #This settings file can be loaded back to Latent Majesty Diffusion. If you like your setting consider sharing it to the settings library at https://github.com/multimodalart/MajestyDiffusion    \n",
+        "    {comment}\n",
         "    [model]\n",
         "    latent_diffusion_model = {latent_diffusion_model}\n",
         "    \n",
@@ -1638,6 +1658,8 @@
         "#@markdown ### Save current settings\n",
         "#@markdown If you would like to save your current settings, uncheck `skip_saving` and run this cell. You will get a `custom_settings.cfg` file you can reuse and share. If you like your results, <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us on the settings library</a>\n",
         "skip_saving = True #@param{type:'boolean'}\n",
+        "#@markdown An optional name for your run to label the settings file.\n",
+        "run_name = None #@param{type:'string'}\n",
         "if(not skip_saving):\n",
         "  data = generate_settings_file(add_prompts=False, add_dimensions=True)\n",
         "  text_file = open(\"custom_settings.cfg\", \"w\")\n",
@@ -1677,11 +1699,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+      }
     }
   },
   "nbformat": 4,
