--- a/latent.ipynb
+++ b/latent.ipynb
@@ -1659,7 +1659,7 @@
         "#@markdown If you would like to save your current settings, uncheck `skip_saving` and run this cell. You will get a `custom_settings.cfg` file you can reuse and share. If you like your results, <a href=\"https://huggingface.co/datasets/multimodalart/latent-majesty-diffusion-settings\">share your settings with us on the settings library</a>\n",
         "skip_saving = True #@param{type:'boolean'}\n",
         "#@markdown An optional name for your run to label the settings file.\n",
-        "run_name = None #@param{type:'string'}\n",
+        "run_name = \"\" #@param{type:'string'}\n",
         "if(not skip_saving):\n",
         "  data = generate_settings_file(add_prompts=False, add_dimensions=True)\n",
         "  text_file = open(\"custom_settings.cfg\", \"w\")\n",
