--- a/latent.ipynb
+++ b/latent.ipynb
@@ -786,7 +786,7 @@
         "    i+=1\n",
         "  return(mul_string[1:-2])\n",
         "\n",
-        "def generate_settings_file(add_prompts=False, add_dimensions=False):\n",
+        "def generate_settings_file(add_prompts=False, add_dimensions=False, run_name=None):\n",
         "  \n",
         "  if(add_prompts):\n",
         "    prompts = f'''\n",
@@ -1661,7 +1661,7 @@
         "#@markdown An optional name for your run to label the settings file.\n",
         "run_name = \"\" #@param{type:'string'}\n",
         "if(not skip_saving):\n",
-        "  data = generate_settings_file(add_prompts=False, add_dimensions=True)\n",
+        "  data = generate_settings_file(add_prompts=False, add_dimensions=True, run_name=run_name)\n",
         "  text_file = open(\"custom_settings.cfg\", \"w\")\n",
         "  text_file.write(data)\n",
         "  text_file.close()\n",
